# kokoros

koko/: Cargo.toml
koko/src/: main.rs
kokoros/: Cargo.toml
kokoros-openai/src/: lib.rs
kokoros/src/tts/: koko.rs
kokoros/src/utils/: mod.rs
