[package]
name = "kokoros"
version = "0.1.0"
edition = "2024"

[dependencies]
espeak-rs = { git = "https://github.com/maan2003/espeak-rs", branch = "main" }
hound = "3.5.1"
ndarray = "0.16.1"
lazy_static = "1.5.0"
regex = "1.11.1"
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["fs", "io-util"] }
ndarray-npy = "0.9.1"
mp3lame-encoder = "0.2.1"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4"] }
opus = "0.3"
ogg = "0.9"

ort = { version = "2.0.0-rc.11", default-features = false, features = ["ndarray", "std", "tracing", "pkg-config" ] }

[features]
default = ["cpu"]
cpu = []
cuda = ["ort/cuda"]
